# Satellite

./: .gitignore  Cargo.toml  Trunk.toml  index.html
application/: Cargo.toml
application/src/: error.rs  impls.rs  lib.rs  transfer.rs
application/src/impls/: account.rs
application/src/services/: account.rs
application/src/transfer/: account.rs  identifier.rs
client/: Cargo.toml
client/src/: handler.rs  main.rs
driver/: Cargo.toml
driver/src/: driver.rs  error.rs  lib.rs  transport.rs
driver/src/transport/: signup.rs  verify.rs
kernel/: Cargo.toml
kernel/src/: entities.rs  error.rs  lib.rs  transport.rs
kernel/src/entities/: account.rs  identifier.rs
kernel/src/entities/account/: address.rs  name.rs  pass.rs  user_id.rs
kernel/src/transport/: stellar.rs
kernel/src/transport/stellar/: signup.rs  verifier.rs
service/: Cargo.toml
