[package]
name = "application"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
orbital   = { workspace = true }
async-trait = "0.1"

kernel = { path = "../kernel" }