[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }

log = "0.4"
wasm-logger = "0.2"

kernel = { path = "../kernel" }
driver = { path = "../driver" }
application = { path = "../application" }

[dev-dependencies]
wasm-bindgen = "0.2"
