[package]
name = "driver"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }

serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
getrandom = { version = "0.2", features = ["js"] }
once_cell = "1"
dotenvy = "0.15"

kernel = { path = "../kernel" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }