[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
orbital   = { workspace = true }
serde = { version = "1", features = ["derive"] }
uuid  = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"

[features]
prelude = []
interfaces = []
default = ["prelude", "interfaces"]